[Fix #52] 전체 화면 수정

--- a/app/src/main/res/layout/fragment_inquiring.xml
+++ b/app/src/main/res/layout/fragment_inquiring.xml
@@ -6,55 +6,14 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="#FFFFFF"
-    android:padding="20dp"
     tools:context="ui.inquiry.InquiringFragment">
-
-
-    <com.google.android.material.appbar.MaterialToolbar
-        android:id="@+id/inquiringToolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="@color/white"/>
-
-
-    <com.google.android.material.tabs.TabLayout
-        android:id="@+id/inquiringTabLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:tabIndicatorColor="@color/third"
-        app:tabIndicatorHeight="2dp"
-        app:tabIndicatorGravity="bottom"
-        app:tabTextColor="@color/lightGray"
-        app:tabSelectedTextColor="@android:color/black"
-        app:tabIndicatorFullWidth="true">
-
-        <com.google.android.material.tabs.TabItem
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="문의중" />
-
-        <com.google.android.material.tabs.TabItem
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="답변완료" />
-    </com.google.android.material.tabs.TabLayout>
-
-
-    <com.google.android.material.search.SearchBar
-        android:id="@+id/inquiringSearchbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:hint="키워드 검색"
-        android:textAppearance="@color/lightGray"/>
 
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/inquiringRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        android:layout_margin="8dp" />
+        android:layout_weight="1" />
 
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -65,5 +24,6 @@
         android:layout_margin="16dp"
         android:src="@drawable/icon_add"
         app:backgroundTint="@color/third"
-        app:tint="@android:color/white"/>
+        app:tint="@android:color/white"
+        app:shapeAppearance="@style/Widget.Material3.CircularProgressIndicator"/>
 </LinearLayout>
