--- a/app/src/main/res/layout/fragment_vote_history.xml
+++ b/app/src/main/res/layout/fragment_vote_history.xml
@@ -6,8 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".ui.vote.VoteHistoryFragment"
-    android:background="#FFFFFF"
-    android:padding="20dp">
+    android:background="#FFFFFF">
 
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/voteHistoryToolbar"
@@ -15,12 +14,14 @@
         android:layout_height="wrap_content"
         android:background="@color/white"
         android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme" />
+        android:theme="?attr/actionBarTheme"
+        app:titleCentered="true"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="20dp">
 
         <TextView
             android:id="@+id/voteHistoryTextView"
@@ -56,7 +57,8 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:padding="20dp">
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/voteHistoryButton"
