--- a/app/src/main/res/layout/fragment_vote_list.xml
+++ b/app/src/main/res/layout/fragment_vote_list.xml
@@ -4,13 +4,13 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:background="#FFFFFF"
-    android:padding="20dp">
+    android:background="#FFFFFF">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="20dp">
 
         <!-- 진행 중인 투표 Section -->
         <TextView
@@ -23,50 +23,58 @@
             android:text="진행 중인 투표"
             android:textSize="18sp" />
 
-        <androidx.cardview.widget.CardView
+        <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
-            app:cardCornerRadius="8dp"
-            app:cardElevation="4dp">
+            android:background="@drawable/style_pointbutton_radias"
+            android:padding="2dp"> <!-- 테두리 두께 설정 -->
 
-            <LinearLayout
+            <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:padding="16dp">
+                app:cardCornerRadius="8dp"
+                app:cardElevation="4dp"
+                android:background="@android:color/white"> <!-- 카드뷰 배경색 설정 -->
 
-                <TextView
-                    android:id="@+id/voteListCardTextView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="8dp"
-                    android:fontFamily="@font/notosans_semibold"
-                    android:includeFontPadding="false"
-                    android:text="동 대표 선거"
-                    android:textSize="16sp" />
-
-                <TextView
-                    android:id="@+id/voteListCardTextView1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="16dp"
-                    android:fontFamily="@font/notosans_regular"
-                    android:includeFontPadding="false"
-                    android:text="2024년 05/01일 부터 05/15일까지 동 대표 선거가 진행되고 있습니다. 많은 참여 부탁드립니다." />
-
-                <androidx.appcompat.widget.AppCompatButton
-                    android:id="@+id/voteListButton"
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="40dp"
-                    android:background="@drawable/style_pointbutton_radias"
-                    android:fontFamily="@font/notosans_semibold"
-                    android:includeFontPadding="false"
-                    android:text="투표 하기"
-                    android:textColor="@color/black"
-                    android:textSize="16sp" />
-            </LinearLayout>
-        </androidx.cardview.widget.CardView>
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:padding="16dp">
+
+                    <TextView
+                        android:id="@+id/voteListCardTextView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="8dp"
+                        android:fontFamily="@font/notosans_semibold"
+                        android:includeFontPadding="false"
+                        android:text="동 대표 선거"
+                        android:textSize="16sp" />
+
+                    <TextView
+                        android:id="@+id/voteListCardTextView1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="16dp"
+                        android:fontFamily="@font/notosans_regular"
+                        android:includeFontPadding="false"
+                        android:text="2024년 05/01일 부터 05/15일까지 동 대표 선거가 진행되고 있습니다. 많은 참여 부탁드립니다." />
+
+                    <androidx.appcompat.widget.AppCompatButton
+                        android:id="@+id/voteListButton"
+                        android:layout_width="match_parent"
+                        android:layout_height="40dp"
+                        android:background="@drawable/style_pointbutton_radias"
+                        android:fontFamily="@font/notosans_semibold"
+                        android:includeFontPadding="false"
+                        android:text="투표 하기"
+                        android:textColor="@color/black"
+                        android:textSize="16sp" />
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
+        </FrameLayout>
 
         <!-- 지난 투표 내역 Section -->
         <TextView
