--- a/app/src/main/res/layout/row_survey.xml
+++ b/app/src/main/res/layout/row_survey.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <TextView
@@ -9,24 +9,24 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="오늘 저녁 뭐 먹을까요?"
-        android:textSize="18sp"
         android:fontFamily="@font/notosans_regular"
-        android:includeFontPadding="false"/>
+        android:includeFontPadding="false"
+        android:text="오늘 저녁 뭐 먹을까요?"
+        android:textSize="18sp" />
 
     <TextView
         android:id="@+id/rowSurveyTextView2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="2024년 04/01"
-        android:textSize="16sp"
         android:fontFamily="@font/notosans_regular"
-        android:includeFontPadding="false"/>
+        android:includeFontPadding="false"
+        android:text="2024년 04/01"
+        android:textSize="16sp" />
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_marginVertical="20dp"
-        android:background="#000000" />
+        android:background="@color/lightGray" />
 </LinearLayout>
