--- a/app/src/main/res/layout/fragment_parking_reserve.xml
+++ b/app/src/main/res/layout/fragment_parking_reserve.xml
@@ -184,6 +184,7 @@
                 android:textColor="@color/first" />
 
             <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/parkingReserveRecyclerview"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginTop="10dp" />
