--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,7 +1,44 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.FinalProjectApartTalk" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your dark theme here. -->
-        <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
+    <style name="Base.Theme.FinalProjectApartTalk" parent="Theme.Material3.Light.NoActionBar">
+        <!-- Customize your light theme here. -->
+        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <!-- 상태바의 색상을 바꿔보자 -->
+        <item name="colorPrimaryDark">@color/white</item>
+        <item name="android:windowLightStatusBar">true</item>
+        <item name="fontFamily">@font/notosans_semibold</item>
+        <item name="android:includeFontPadding">false</item>
     </style>
+
+    <style name="Theme.FinalProjectApartTalk" parent="Base.Theme.FinalProjectApartTalk" />
+
+    <style name="Theme.MyApplicationCheck" parent="Base.Theme.FinalProjectApartTalk" />
+
+    <style name="Base.Theme.ApartTalk" parent="Theme.Material3.DayNight.NoActionBar">
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowActivityTransitions">true</item>
+        <item name="android:windowFullscreen">true</item>
+    </style>
+
+    <style name="CustomTheme" parent="Base.Theme.FinalProjectApartTalk">
+        <item name="colorPrimary">@color/second</item>
+    </style>
+
+    <style name="Toolbar.TitleText" parent="TextAppearance.Widget.AppCompat.Toolbar.Title">
+        <item name="android:textSize">25sp</item>
+    </style>
+
+    <!-- 체크박스 -->
+    <style name="CustomCheckBox" parent="Widget.AppCompat.CompoundButton.CheckBox">
+        <item name="buttonTint">@color/checkbox_tint</item>
+        <item name="buttonIconTint">@color/checkbox_icon_tint</item>
+    </style>
+
+    <!-- Tab Font 설정 -->
+    <style name="MySelectedTabTextAppearance" parent="TextAppearance.Design.Tab">
+        <item name="android:textSize">14sp</item>
+        <item name="android:fontFamily">@font/notosans_semibold</item>
+    </style>
+
 </resources>
