--- a/app/src/main/res/values/aparttalk5_background.xml
+++ b/app/src/main/res/values/aparttalk5_background.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="aparttalk2_background">#FFFFFF</color>
+    <color name="aparttalk5_background">#73C0B0</color>
 </resources>
